// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders while running 1`] = `
<div
  className="sc-AxiKw hWLoBU"
>
  <div
    className="sc-AxhUy ddapae"
  >
    <span
      className="sc-AxgMl fFPQpl"
    >
      0
    </span>
    <span
      className="sc-AxheI hONRQf"
    >
      42
    </span>
  </div>
  <button
    className="sc-AxjAm sc-AxirZ fsAWsX"
    onClick={[Function]}
  >
    Stop
  </button>
</div>
`;

exports[`renders with long break state 1`] = `
<div
  className="sc-AxiKw hWLoBU"
>
  <div
    className="sc-AxhCb pZJBt"
  >
    🛌🛌
  </div>
  <button
    className="sc-AxjAm sc-AxirZ hIdFsg"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with pomodoro state 1`] = `
<div
  className="sc-AxiKw hWLoBU"
>
  <div
    className="sc-AxhCb pZJBt"
  >
    🍅
  </div>
  <button
    className="sc-AxjAm sc-AxirZ hIdFsg"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;

exports[`renders with short break state 1`] = `
<div
  className="sc-AxiKw hWLoBU"
>
  <div
    className="sc-AxhCb pZJBt"
  >
    🛌
  </div>
  <button
    className="sc-AxjAm sc-AxirZ hIdFsg"
    onClick={[Function]}
  >
    Start
  </button>
</div>
`;
